--- a/public/layout.css
+++ b/public/layout.css
@@ -1,3 +1,8 @@
+.nav {
+    display: inline-block;
+    background-color: transparent;
+    border: none;
+}
 
 .main {
     padding-top: 50px;
@@ -14,6 +19,10 @@
     height:200px;
     white-space: nowrap;
     position: relative;
+}
+
+.fretboard-wrapper {
+    text-align: center;
 }
 
 .fret {
@@ -41,7 +50,7 @@
     height: 23px;
 
     top: -1px;
-    left: 4px;
+    left: 13px;
 }
 
 .round-root {
